Basics of SNES reading (untested)

--- a/v1-creativision-snes-pcb/firmware/creativision-gamepad-keyboard-v1/CMakeLists.txt
+++ b/v1-creativision-snes-pcb/firmware/creativision-gamepad-keyboard-v1/CMakeLists.txt
@@ -27,6 +27,7 @@ pico_sdk_init()
 
 add_executable(creativision-gamepad-keyboard-v1
        gamepad.cpp
+       snespad.cpp
        )
 
 pico_set_program_name(creativision-gamepad-keyboard-v1 "creativision-gamepad-keyboard-v1")
